--- a/TourGuide/app/src/main/AndroidManifest.xml
+++ b/TourGuide/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_map_24dp"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -23,8 +23,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Main2Activity"
-            android:label="@string/title_activity_main2"
+            android:name=".Attractions"
+            android:label="@string/attractions"></activity>
+        <activity
+            android:name=".Transport"
+            android:label="@string/transport"></activity>
+        <activity
+            android:name=".Emergency"
+            android:label="@string/emergency"></activity>
+        <activity
+            android:name=".Accommodation"
+            android:label="@string/accommodation"></activity>
+        <activity
+            android:name=".Details"
+            android:label="@string/title_activity_details"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
