--- a/TourGuide/app/src/main/AndroidManifest.xml
+++ b/TourGuide/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hack.tourguide">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +27,10 @@
         <activity
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".ListActivity"
+            android:label="ListActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
