--- a/TourGuide/app/build.gradle
+++ b/TourGuide/app/build.gradle
@@ -21,11 +21,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.support:design:25.3.0'
-    compile "com.android.support:cardview-v7:25.1.1"
+    compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
