--- a/TourGuide/app/build.gradle
+++ b/TourGuide/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     compile "com.android.support:cardview-v7:25.1.1"
     compile 'com.google.android.gms:play-services-places:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
 }
